syntax = "proto3";

package blog;

service BlogService {
   
    rpc ListBlog (ListBlogRequest) returns (stream ListBlogResponse) {};
    rpc CreateBlog (CreateBlogRequest) returns (CreateBlogResponse) {};
}

message CreateBlogRequest {
  Blog blog = 1;
}

message CreateBlogResponse {
  Blog blog = 1;
}

message Blog {
    string id = 1;
    string author = 2;
    string title = 3;
    string content = 4;
}
message ListBlogRequest {}

message ListBlogResponse{
    Blog blog = 1;
}